content additions and restructuring of STEP 0 in 'Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb'.

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "id": "817e6dc4-264c-44b1-b467-680529aeda24",
    "metadata": {
-    "incorrectly_encoded_metadata": "toc-hr-collapsed=true"
+    "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
+    "tags": []
    },
    "source": [
     "# Introduction"
@@ -125,8 +126,7 @@
    "metadata": {
     "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true toc-hr-collapsed=true",
     "tags": [
-     "TODO_Step_0",
-     "STEP_0"
+     "TODO_Step_0"
     ]
    },
    "source": [
@@ -134,22 +134,46 @@
     "\n",
     "In this step, specific guidance is provided for selecting hardware and software suitable for machine learning.\n",
     "\n",
-    "**@TODO:**\n",
-    "Include in this section the presentation `IFA_Steimers_Industry_Risikoquellen_KI_2021-03-05.pdf` by Prof. Steimers (IFA) slide 15 \"System Hardware\": Distinction between **Training and Application System**.\n",
-    "\n",
     "## Hardware\n",
     "\n",
-    "### General hardware requirements\n",
+    "In regarding the hardware requirements, 2 systems and their use cases need to be considered: the **training system** and the **application system**.\n",
     "\n",
-    "### Desktop or server based\n",
+    "### Trainingssystem\n",
     "\n",
+    "The **training phase** requires a lot of **computational power** and **memory (RAM)**, depending on the **amount of data** to be processed and the **ML algorithm (so-called estimator)** chosen.\n",
     "\n",
-    "### Embedded application\n",
+    "Depending on the estimator model, highly parallel processing on a **Graphics Processing Unit (GPU)** can provide significant **speed advantages** over processing on a **Central Processing Unit (CPU)** (e.g., when training deep neural networks in the area of **deep learning**). To take advantage of this speed benefit, the AI application must be suitable in terms of **parallelizability** of the estimator model used as well as **GPU support** through special driver layers (so-called Operating System Abstraction Layer (OSAL)).\n",
     "\n",
+    "Such GPUs are installed on powerful **3D graphics cards**. However, these must be explicitly suitable for the application for AI - not every game-suitable 3D graphics card from any manufacturer can be used. The manufacturer **Nvidia** offers GPUs suitable for AI in its high-performance graphics cards with **CUDA architecture**. CUDA stands for \"Compute Unified Device Architecture\" and is a **programming interface** (API) developed by Nvidia, with which program parts can be processed by the graphics processor (GPU). The GPU works significantly faster than the CPU, especially with highly parallelizable program sequences (high data parallelism). This speed advantage can be considerable despite currently available CPU technologies like **Multicore** and **Hyper-Threading** with Intel CPUs!\n",
+    "\n",
+    "Nvidia graphics cards with CUDA-supporting GPUs can be found listed by their **compute capability** (the higher the value, the better) here: [CUDA GPUs - Compute Capability](https://developer.nvidia.com/cuda-gpus).\n",
+    "\n",
+    "The **state of the art** should be taken into account when selecting the rest of the training system's hardware. Otherwise, seemingly (price-wise) inexpensive components could very quickly nullify the speed advantage of the GPU. In addition to a mainboard suitable for one (or more) high-performance 3D graphics cards with a correspondingly powerful BUS system (e.g. PCI Express), the RAM should be as large as possible (min. 64 GB) and fast. A large RAM allows, for example, the **virtualization** of several parallel systems (see [Virtual machine](https://en.wikipedia.org/wiki/Virtual_machine)) and thus a significantly better utilization of the available computing capacity. The permanent memory should also be as large and fast as possible - high-performance **solid-state drives (SSDs)** should be clearly preferred over classic hard disks (HDDs).\n",
+    "\n",
+    "### Applikationssystem\n",
+    "\n",
+    "In the **application phase** of the trained estimator model, considerably less computing power and RAM are usually required. If the concrete application does not require **continuous learning during operation**, significantly less expensive systems (in terms of acquisition costs, power consumption, etc.) can also be used. Such application-specific **embedded systems** have only one CPU (usually in **ARM architecture**), comparatively limited RAM (e.g. 1 - 8 GB) and usually no GPU. A popular **embedded computer** that is very well supported in terms of ML software is the **[Raspberry Pi](https://en.wikipedia.org/wiki/Raspberry_Pi)**. In addition to its ARM CPU, the Raspberry Pi also has a GPU installed on the same processor in the so-called **System on a Chip design (SoC)**. However, the SoC manufacturer **Broadcom** does not support the CUDA API. Parallelizing the AI application on the GPU of the Raspberry Pi is therefore (currently) not an option.\n",
+    "\n",
+    "Here are some links for further reading:\n",
+    "\n",
+    "- [Deep learning with Raspberry Pi and alternatives in 2022](https://qengineering.eu/deep-learning-with-raspberry-pi-and-alternatives.html)\n",
+    "- [Benchmarking Machine Learning on the New Raspberry Pi 4, Model B](https://www.hackster.io/news/benchmarking-machine-learning-on-the-new-raspberry-pi-4-model-b-88db9304ce4)\n",
+    "- [Portable Computer Vision: TensorFlow 2.0 on a Raspberry Pi](https://towardsdatascience.com/portable-computer-vision-tensorflow-2-0-on-a-raspberry-pi-part-1-of-2-84e318798ce9)\n",
     "\n",
     "## Software\n",
     "\n",
-    "### General requirements to the operating system\n",
+    "### Operating system\n",
+    "\n",
+    "**@TODO:** Rephrase and translate!!\n",
+    "\n",
+    "These are general requirements to the operating system:\n",
+    "\n",
+    "- Offenheit (Verfügbarkeit sehr guter Schnittstellen-Dokumentation und idealerweise quelloffener Software)\n",
+    "- Verfügbarkeit (Installations- und Konfigurationsrechte)\n",
+    "- Kommunikation (ungefilterte und bidirektionale Kommunikation im lokalen Netzwerk sowie ins Internet auf allen notwendigen Protokollen)\n",
+    "- leichte Erweiterbarkeit\n",
+    "    - SW-Installation + Updates über zentrale Paketmanagementsysteme wie z. B. `apt`, `pip` oder `conda`\n",
+    "    - Einbindung zusätzlicher SW-Bibliotheken oder externer HW-Sensoren\n",
     "\n",
     "### Programming IDEs\n",
     "\n",
@@ -175,10 +199,18 @@
     "\n",
     "##### `Scikit-Learn`\n",
     "\n",
-    "##### `TensorFlow`\n",
+    "##### `TensorFlow`, `Keras`, `CUDA Toolkit`\n",
     "\n",
     "The package `TensorFlow` offers, among other things, the possibility to create and train **artificial neural networks (ANN)** based on Google AI. However, the installation and application is very much beyond the scope of this beginner tutorial. Further information can be found here: [https://www.tensorflow.org](https://www.tensorflow.org).\n",
-    "\n"
+    "\n",
+    "## Community Support\n",
+    "\n",
+    "When selecting and deciding for or against the use of certain hardware and software components, in addition to purely technical or financial characteristics, significant attention should be paid to broad **support from a well-networked community**. This community should consist of a balanced share of **manufacturers** of hardware components (e.g. GPU suppliers, manufacturers of embedded systems or sensors), **software developers** ideally from the **open source** ecosystem, and an active **user community** (e.g. for reporting hardware and software bugs or providing help in forums).\n",
+    "\n",
+    "The author's many years of development experience show that the technically best hardware or software component is worthless if you are (apparently) the only user. This impression arises either because the component is actually very exotic and has only a few users or because the development takes place \"behind closed doors\", i.e. in the company's internal **closed source** domain.\n",
+    "\n",
+    "Without the support of an active community, you are (almost) on your own when it comes to questions or problems. Progress in the development and maintenance of an AI application is therefore very difficult!\n",
+    "The clear recommendation is therefore: Go for the (technically, price-wise) **second-best alternative** with an even bigger **community** :)\n"
    ]
   },
   {
@@ -216,9 +248,7 @@
    "cell_type": "markdown",
    "id": "333ccfb3-b874-4ae5-8b51-2423fae87c69",
    "metadata": {
-    "tags": [
-     "STEP_1"
-    ]
+    "tags": []
    },
    "source": [
     "# STEP 1: Acquire the ML dataset\n",
@@ -246,9 +276,7 @@
    "id": "50a2bb9d-a80d-479e-bdb2-eef7c3809f8f",
    "metadata": {
     "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true toc-hr-collapsed=true toc-hr-collapsed=true",
-    "tags": [
-     "STEP_2"
-    ]
+    "tags": []
    },
    "source": [
     "# STEP 2: Explore the ML dataset\n",
@@ -6160,8 +6188,7 @@
    "metadata": {
     "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
     "tags": [
-     "TODO_Step_3",
-     "STEP_3"
+     "TODO_Step_3"
     ]
    },
    "source": [
@@ -6401,9 +6428,7 @@
    "cell_type": "markdown",
    "id": "66d2b933-45de-49d4-9af5-2e56a6e7dc14",
    "metadata": {
-    "tags": [
-     "STEP_4"
-    ]
+    "tags": []
    },
    "source": [
     "# STEP 4: Prepare the dataset for training\n",
@@ -6615,9 +6640,7 @@
    "id": "72a04b84-457a-4ba8-8892-aaa1862b0060",
    "metadata": {
     "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
-    "tags": [
-     "STEP_5"
-    ]
+    "tags": []
    },
    "source": [
     "# STEP 5: Carry out training, prediction and testing\n",
@@ -6770,9 +6793,7 @@
    "id": "6e2e6598-0dd0-4f4d-820c-5cdc6f48d827",
    "metadata": {
     "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
-    "tags": [
-     "STEP_6"
-    ]
+    "tags": []
    },
    "source": [
     "# STEP 6: Evaluate model's performance\n",
@@ -6978,9 +6999,7 @@
    "id": "1d663dfd-bf5b-4d0d-8ca6-f1ac06575f6f",
    "metadata": {
     "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
-    "tags": [
-     "STEP_7"
-    ]
+    "tags": []
    },
    "source": [
     "# STEP 7: Vary parameters of the ML model manually\n",
@@ -7727,9 +7746,7 @@
    "id": "ee9c2ad8-244e-46e5-bc62-5841108787e9",
    "metadata": {
     "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
-    "tags": [
-     "STEP_8"
-    ]
+    "tags": []
    },
    "source": [
     "# STEP 8: Tune the ML model systematically\n",
