small changes in 'Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb'

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -136,7 +136,7 @@
     "\n",
     "## Hardware\n",
     "\n",
-    "In regarding the hardware requirements, 2 systems and their use cases need to be considered: the **training system** and the **application system**.\n",
+    "When considering hardware requirements, 2 systems and their use cases must be considered: the **training system** and the **application system**.\n",
     "\n",
     "### Training system\n",
     "\n",
