added TODOs to 'Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb'

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -2446,11 +2446,11 @@
    "source": [
     "## Identify **anomalies** in the datasets\n",
     "\n",
-    "### Find gaps in dataset\n",
+    "### Find and repair gaps in dataset\n",
     "\n",
     "This section was inspired by [Working with Missing Data in Pandas](https://www.geeksforgeeks.org/working-with-missing-data-in-pandas/).\n",
     "\n",
-    "#### Checking for missing values using `isnull()`\n",
+    "#### Check for missing values using `isnull()`\n",
     "\n",
     "In order to check for missing values in Pandas DataFrame, we use the function `isnull()`. This function returns a dataframe of Boolean values which are True for **NaN values**."
    ]
@@ -3833,9 +3833,9 @@
    "id": "b325d6c7-be34-4309-9115-d4d575276891",
    "metadata": {},
    "source": [
-    "#### Fill the missing values with `fillna()`\n",
+    "#### Fill in missing *string* values with `fillna()`\n",
     "\n",
-    "Now we are going to fill all the null (NaN) values in Gender column with *\"No Gender\"*.\n",
+    "Now all null values (NaN) in the column \"Gender\" of the data type String are filled with *\"No gender \"*.\n",
     "\n",
     "**Warning:** We are doing that directly in this dataframe with `inplace = True` - we don't make a deep copy!"
    ]
@@ -4315,10 +4315,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f53e19c0-8805-4ea0-b842-0868ea078144",
+   "metadata": {
+    "tags": [
+     "TODO_Step_2_1"
+    ]
+   },
+   "source": [
+    "#### Fill in missing *numerical* values with mean values\n",
+    "\n",
+    "Missing integer or float values can be filled with the mean values of the corresponding column.\n",
+    "\n",
+    "**@TODO:**  \n",
+    "Incorporate section \"4.1.3 Fehlende Werte ergänzen\" of the book `mitp_Praxishandbuch_Machine_Learning_Python_Scikit-learn_TensorFlow_2018_Anm_bk.pdf`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "336f4c0e-8476-4c14-a167-6d855c42940b",
    "metadata": {},
    "source": [
-    "#### Dropping missing values using `dropna()`\n",
+    "#### Drop missing values using `dropna()`\n",
     "\n",
     "In order to drop null values from a dataframe, we use `dropna()` function. This function drops rows or columns of datasets with NaN values in different ways.\n",
     "\n",
@@ -4582,7 +4599,7 @@
    "id": "d46ac699-fb5b-49c8-96df-3a4578a039ce",
    "metadata": {},
    "source": [
-    "#### Checking for duplicate values using `duplicated()`\n",
+    "#### Check for duplicate values using `duplicated()`\n",
     "\n",
     "In order to check for duplicate values in Pandas DataFrame, we use a function `duplicated()`. This function can be used in two ways:\n",
     "- find duplicate rows across **all columns** with `duplicateRows = df[df.duplicated()]`\n",
@@ -5221,7 +5238,7 @@
     "tags": []
    },
    "source": [
-    "#### Dropping duplicate values using `drop_duplicates()`\n",
+    "#### Drop duplicate values using `drop_duplicates()`\n",
     "\n",
     "In order to drop duplicate values from a dataframe, we use `drop_duplicates()` function.\n",
     "\n",
@@ -5657,6 +5674,39 @@
     "employees_df.drop_duplicates(\n",
     "    subset=['First Name', 'Last Login Time'], keep='last', inplace=True)\n",
     "employees_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "006c4e15-466c-4983-ae67-2ffffca868e8",
+   "metadata": {
+    "tags": [
+     "TODO_Step_2_2"
+    ]
+   },
+   "source": [
+    "### Compare the edited dataset with the original dataset side-by-side\n",
+    "\n",
+    "**@TODO:**  \n",
+    "Incorporate following sources:\n",
+    "- [Compare two DataFrames and output their differences side-by-side](https://stackoverflow.com/questions/17095101/compare-two-dataframes-and-output-their-differences-side-by-side/47112033#47112033)\n",
+    "- [pandas compare two data frames and highlight the differences](https://stackoverflow.com/questions/71604701/pandas-compare-two-data-frames-and-highlight-the-differences/71617662#71617662)\n",
+    "- [How to Compare Two Pandas DataFrames and Get Differences](https://datascientyst.com/compare-two-pandas-dataframes-get-differences/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05524098-fdf2-4515-9c1b-8e990b9259af",
+   "metadata": {
+    "tags": [
+     "TODO_Step_2_3"
+    ]
+   },
+   "source": [
+    "### Save edited dataset to new CSV file\n",
+    "\n",
+    "**@TODO:**  \n",
+    "Add explanation and python code here."
    ]
   },
   {
@@ -6481,11 +6531,18 @@
   {
    "cell_type": "markdown",
    "id": "998d8cda-cb55-47bf-a591-49c0ee928574",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "TODO_Step_4"
+    ]
+   },
    "source": [
     "## Standarization\n",
     "\n",
-    "Standardize the feature values by computing the **mean**, subtracting the mean from the data points, and then dividing by the **standard deviation**."
+    "Standardize the feature values by computing the **mean**, subtracting the mean from the data points, and then dividing by the **standard deviation**.\n",
+    "\n",
+    "**@TODO:**  \n",
+    "Incorporate section \"Skalieren von Merkmalen\" of the book `OReilly_Praxiseinstieg_Machine_Learning_Scikit-Learn_TensorFlow_2018_Anm_bk.pdf`."
    ]
   },
   {
@@ -6904,7 +6961,10 @@
    "source": [
     "## Cross-validation score\n",
     "\n",
-    "The function `cross_val_score()` from the Scikit-learn package **trains and tests a model over multiple folds** of your dataset. This cross validation method gives a better **understanding of model performance** over the whole dataset instead of just a single train/test split (see [Using cross_val_score in sklearn, simply explained](https://stephenallwright.com/cross_val_score-sklearn/))."
+    "The function `cross_val_score()` from the Scikit-learn package **trains and tests a model over multiple folds** of your dataset. This cross validation method gives a better **understanding of model performance** over the whole dataset instead of just a single train/test split (see [Using cross_val_score in sklearn, simply explained](https://stephenallwright.com/cross_val_score-sklearn/)).\n",
+    "\n",
+    "**@TODO:**  \n",
+    "Incorporate section \"Bessere Auswertung mittels Kreuzvalidierung\" of the book `OReilly_Praxiseinstieg_Machine_Learning_Scikit-Learn_TensorFlow_2018_Anm_bk.pdf`."
    ]
   },
   {
